@@ -53,7 +53,8 @@ local function moveToContainer(item, creator, container_type)
         end
     end
     local bucketType = dfhack.items.findType(container_type .. ':NONE')
-    local bucket = df.item.find(dfhack.items.createItem(bucketType, -1, containerMat.type, containerMat.index, creator))
+    local buckets = dfhack.items.createItem(creator, bucketType, -1, containerMat.type, containerMat.index)
+    local bucket = buckets[0]
     dfhack.items.moveToContainer(item, bucket)
     return bucket
 end
@@ -118,8 +119,8 @@ local function createCorpsePiece(creator, bodypart, partlayer, creatureID, caste
     local itemSubtype = dfhack.items.findSubtype(item_type .. ':NONE')
     local material = 'CREATURE_MAT:' .. raceName .. ':' .. layerMat
     local materialInfo = dfhack.matinfo.find(material)
-    local item_id = dfhack.items.createItem(itemType, itemSubtype, materialInfo['type'], materialInfo.index, creator)
-    local item = df.item.find(item_id)
+    local items = dfhack.items.createItem(creator, itemType, itemSubtype, materialInfo['type'], materialInfo.index)
+    local item = items[0]
     -- if the item type is a corpsepiece, we know we have one, and then go on to set the appropriate flags
     if item_type == 'CORPSEPIECE' then
         if layerName == 'BONE' then -- check if bones
@@ -239,38 +240,51 @@ local function createCorpsePiece(creator, bodypart, partlayer, creatureID, caste
 end
 
 local function createItem(mat, itemType, quality, creator, description, amount)
-    local item = df.item.find(dfhack.items.createItem(itemType[1], itemType[2], mat[1], mat[2], creator))
-    local item2 = nil
-    assert(item, ('failed to create item: item_type: %s, item_subtype: %s, mat_type: %s, mat_index: %s, unit: %s'):format(itemType[1], itemType[2], mat[1], mat[2], creator and creator.id or 'nil'))
+    -- The "reaction-gloves" tweak can cause this to create multiple gloves
+    local items = dfhack.items.createItem(creator, itemType[1], itemType[2], mat[1], mat[2])
+    assert(#items > 0, ('failed to create item: item_type: %s, item_subtype: %s, mat_type: %s, mat_index: %s, unit: %s'):format(itemType[1], itemType[2], mat[1], mat[2], creator and creator.id or 'nil'))
+    local item = items[1]
     local mat_token = dfhack.matinfo.decode(item):getToken()
     quality = math.max(0, math.min(5, quality - 1))
-    item:setQuality(quality)
+    -- If we got multiple gloves, set quality on all of them
+    for _, it in pairs(items) do
+        it:setQuality(quality)
+    end
     local item_type = df.item_type[itemType[1]]
     if item_type == 'SLAB' then
         item.description = description
     elseif item_type == 'GLOVES' then
-        --create matching gloves
-        item:setGloveHandedness(1)
-        item2 = df.item.find(dfhack.items.createItem(itemType[1], itemType[2], mat[1], mat[2], creator))
-        assert(item2, 'failed to create item')
-        item2:setQuality(quality)
-        item2:setGloveHandedness(2)
+        --create matching gloves, if necessary
+        if item:getGloveHandedness() == 0 then
+            for _, it in pairs(items) do
+                it:setGloveHandedness(1)
+            end
+            local items2 = dfhack.items.createItem(creator, itemType[1], itemType[2], mat[1], mat[2])
+            assert(#items2 > 0, 'failed to create second gloves')
+            for _, it2 in pairs(items2) do
+                it2:setQuality(quality)
+                it2:setGloveHandedness(2)
+                table.insert(items, it2)
+            end
+        end
     elseif item_type == 'SHOES' then
         --create matching shoes
-        item2 = df.item.find(dfhack.items.createItem(itemType[1], itemType[2], mat[1], mat[2], creator))
-        assert(item2, 'failed to create item')
-        item2:setQuality(quality)
+        local items2 = dfhack.items.createItem(creator, itemType[1], itemType[2], mat[1], mat[2])
+        assert(#items2 > 0, 'failed to create second shoes')
+        for _, it2 in pairs(items2) do
+            it2:setQuality(quality)
+            table.insert(items, it2)
+        end
     end
     if tonumber(amount) > 1 then
         item:setStackSize(amount)
-        if item2 then item2:setStackSize(amount) end
     end
     if item_type == 'DRINK' then
         return moveToContainer(item, creator, 'BARREL')
     elseif mat_token == 'WATER' or mat_token == 'LYE' then
         return moveToContainer(item, creator, 'BUCKET')
     end
-    return {item, item2}
+    return items
 end
 
 local function get_first_citizen()
